# CN_stocks

./: .gitignore  1d_p_1d.py  30.py  CHANGELOG.txt  TODO.md  a.ipynb  a.py  b.py  c.py  fin.py  lib.py  memo.md  model.py  pca_stocks.py  pyproject.toml  r.py  w.py
.results/: README.md
crsp/: a.py
dev/autoenc/: main.txt  net.py
dev/correlation/: visualize_stock_heatmaps.py
experiments/correlation/: returns_correlation.py
loss/: main.py
min/: t1p30.py
min/models/: chronos_like.py  f.py
min/models/chronos_like/: main.py
min/models/embeddings/: quantile.py
min/models/quantile_quantized/: t1p1.py  t1p30.py
minute/: a.py  b.py  c.py  d.py  data.py  e.py  eda copy.ipynb  eda.ipynb  t1p1.py  t1p30.py
models/: CLAUDE.md  pola.py  tm.py
models/daily/: main.py
models/dev/: a.py  draw.py  mq.py
models/embedding/: chrono.py  cross.py  quantile.py
models/experiments/: AGENT.md  embedding.py  final_pipeline.py  readout.py
models/experiments/embedding/: draw.py  inormalized  main.md  main.py
models/pipelines/: chrono.py  cross.py  day_period.py  final_pipeline.py  inspect_final.py  quantile.py
models/portfolios/: main.txt  portfolio.py  quantile_portfolio.py
models/prelude/: config.py  data.py  model.py  tm.py
models/quantile_quantized/: t1p1.py  t1p30.py
models/scripts/: val.py
models/tests/: data.py
profilers/: line_profiler.py  oom_debug_hook.py
s3/: part_sort.py
subtasks/d2s_pre/: check.py  main.py
tick/: a.ipynb  data_to_rust.py  main.py  tmp.py
tick/rbpe/: Cargo.toml
tick/rbpe/src/: bpe.rs  (+3 more)
tick/s3/: a.pt  data.py  part_sort.py  process_single_stock.py  process_single_stock_sketch.py
tick/train/: .gitignore  Cargo.toml  pyproject.toml
utils/: oom_debug_hook.py
val/: main.py
(+8 files in other folders)
