[project]
name = "crsp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "ipykernel>=7.0.0",
    "lightning>=2.5.5",
    "matplotlib>=3.10.7",
    "mlflow>=3.5.1",
    "polars[pandas]>=1.34.0",
    "pytorch-lightning>=2.5.5",
    "rich>=14.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.22.2",
]
