[project]
name = "crsp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "ipykernel>=7.0.0",
    "matplotlib>=3.10.7",
    "maturin>=1.10.1",
    "mlflow>=3.5.1",
    "numba>=0.62.1",
    "optuna>=4.6.0",
    "polars-u64-idx>=1.33.1",
    "polars[pandas]>=1.34.0",
    "pytorch-lightning>=2.5.5",
    "redis[hiredis]>=7.0.1",
    "rich>=14.2.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]
