[project]
name = "crsp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "arrow>=1.4.0",
    "duckdb>=1.4.2",
    "einops>=0.8.1",
    "h5py>=3.15.1",
    "ipykernel>=7.0.0",
    "lightning>=2.5.6",
    "matplotlib>=3.10.7",
    "maturin>=1.10.1",
    "mlflow>=3.5.1",
    "muon-optimizer",
    "numba>=0.62.1",
    "optuna>=4.6.0",
    "polars-u64-idx>=1.33.1",
    "polars[pandas]>=1.34.0",
    "pytorch-lightning>=2.5.5",
    "redis[hiredis]>=7.0.1",
    "rich>=14.2.0",
    "rqdatac>=3.3.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[tool.uv.sources]
muon-optimizer = { git = "https://github.com/KellerJordan/Muon" }
